# Gflibrary

./: LICENSE  README.md
BookLibraryApp/: CMakeLists.txt
BookLibraryApp/include/: AdminManager.cpp  BookManager.cpp  UserInterface.h
BookLibraryApp/scr/: AdminManager.cpp  BookManager.cpp  UserInterface.cpp  main.cpp
